--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,24 @@
+.green {
+  color: #3a9b38;
+}
+.dark-green {
+  color: #02272f;
+}
+
+.golden {
+  color: #e2c52d;
+}
+
+.gray {
+  background-color: #e1e2e1;
+}
+
+.login-page {
+  background: #02272f;
+  width: 100vw;
+  height: 100vh;
+}
+
 .centre-div {
   position: absolute;
   top: 50%;
@@ -22,17 +43,64 @@
   width: 350px;
 }
 
-/* Place text in the middle of the image */
-.banner-sub-text {
+.button {
+  display: inline-block;
+  cursor: pointer;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {
+  filter: brightness(85%);
+}
+
+.button:active {
+  background-color: brightness(85%);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 
 .sign-in-button {
   background-color: #e2c52d;
-  color: #3a1f04;
+  color: #02272f;
+}
+
+.header-footer {
+  background: #f2f2f2;
+  box-shadow: 0 0 2px #666;
+}
+
+.sidebar {
+  box-shadow: inset -1px 0 0 rgb(0 0 0 / 10%);
+  background-color: #02272f;
+}
+
+.aside-item:hover {
+  filter: brightness(85%);
+  background-color: #02272ff0;
+}
+.aside-logo {
+  width: 100%;
+}
+.aside-logo:hover {
+  filter: brightness(85%);
+  background-color: #02272ff0;
+}
+.aside-item-active  {
+  opacity: 0;
+  transition: opacity 800ms;
+  text-align: left;
+}
+.aside-item:hover .aside-item-active {
+  opacity: 1.0;
+}
+
+.vbottom{
+  width: auto;
+    position: absolute;
+    bottom: 0;
 }
