--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   background-color: #e1e2e1;
 }
 
+.main {
+  min-height: auto;
+}
+
 .login-page {
   background: #02272f;
   width: 100vw;
@@ -49,7 +53,8 @@
   outline: none;
   border: none;
   border-radius: 5px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 3px #999;
+  font-size: 0.8em;
 }
 
 .button:hover {
@@ -67,14 +72,20 @@
   color: #02272f;
 }
 
-.header-footer {
-  background: #f2f2f2;
+.footer {
+  background: #f5f5f5;
   box-shadow: 0 0 2px #666;
+  bottom: 0;
+  position: fixed;
+  min-width: 100vw;
+  font-size: 0.9em;
 }
 
 .sidebar {
-  box-shadow: inset -1px 0 0 rgb(0 0 0 / 10%);
+  box-shadow: 4px 3px 2px 2px rgb(0 0 0 / 10%);
   background-color: #02272f;
+  border-radius: 2px;
+  max-height: 10vh;
 }
 .aside-logo {
   width: 200px;
@@ -89,4 +100,10 @@
 }
 .navbar-nav:focus, .navbar-nav:hover {
   filter: brightness(85%);
+}
+.aside-item {
+  font-size: 1.2em;
+}
+.aside-items {
+  margin-left: 30px;
 }
