--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,17 @@
   background-color: #cccccc;
 }
 
+.vh-100 {
+  height: 100vh;
+}
+
+body {
+  font-family: 'Laila', sans-serif;
+}
+
 .main {
   min-height: auto;
+  margin-bottom: auto;
 }
 
 .login-page {
@@ -24,35 +33,15 @@
   height: 100vh;
 }
 
-.centre-div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-}
-
-.center-horizontal {
-  margin: 0;
-  position: absolute;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
 .banner-image {
   background-image: url("./pristine.svg");
 
   /* Set a specific height */
-  height: 150px;
+  height: 115px;
   width: 350px;
 }
 
 .button {
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
   outline: none;
   border: none;
   border-radius: 5px;
@@ -78,8 +67,6 @@
 .footer {
   background: #f5f5f5;
   box-shadow: 0 0 2px #666;
-  bottom: 0;
-  position: fixed;
   min-width: 100vw;
   font-size: 0.9em;
 }
